--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-src/main/resources
+src/main/resources//*
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
@@ -14,10 +14,10 @@ src/main/resources
 .springBeans
 .sts4-cache
 .application.properties
-.application-dev.
+.application-dev
 .application-test.properties
 .application-prod.properties
-
+.gitignore
 
 ### IntelliJ IDEA ###
 .idea
