--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@ default.recipient=robinrodsilva@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
 
-aws.access_key_id=
-aws.secret_access_key=
+aws.access_key_id=AKIA6IOQZEH5EBEEBLU6
+aws.secret_access_key=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
 s3.bucket=curso-spring-robinsil
 s3.region=sa-east-1
 
 img.prefix.client.profile=cp 	
+img.profile.size=200
