--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.mail.host=smtp.gmail.com
 spring.mail.username=robinrodsilva@gmail.com
 
-spring.mail.password=
+spring.mail.password=Robinrodsilva>son1
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
