--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
   
 server.port=8082
 
-spring.profiles.active=test
+spring.profiles.active=prod
 
 default.sender=robinrodsilva@gmail.com
 default.recipient=robinrodsilva@gmail.com
