--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,6 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.url= mysql://b9a3601ff015cf:df3b6f21@us-cdbr-iron-east-05.cleardb.net/heroku_077d9862c9d2e8a?reconnect=true
-
-
-
+spring.datasource.url=CLEARDB_DATABASE_URL: mysql://ba65b1beb37717:f731db43@us-cdbr-iron-east-01.cleardb.net/heroku_19ce05b19fde34e?reconnect=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=none
